# OpenTrace

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: proxy_throughput.rs
npm/: package.json
npm/lib/: main.js
src/: api.rs  capture.rs  config.rs  export_formats.rs  lib.rs  main.rs  metrics.rs  otel.rs  proxy.rs  serve.rs  store.rs
src/sink/: langfuse.rs  langsmith.rs  mod.rs  phoenix.rs  weave.rs
tests/: integration_test.rs
