[package]
name = "trace"
version = "0.2.8"
edition = "2021"
description = "The strace of LLM calls — local-first observability proxy"

[[bin]]
name = "trace"
path = "src/main.rs"

[lib]
name = "trace"
path = "src/lib.rs"

[dependencies]
# Async runtime — only the features actually used
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }

# HTTP server (proxy listener)
axum = "0.7"

# HTTP client (upstream forwarding)
reqwest = { version = "0.12", features = ["stream"] }

# Local storage (SQLite, bundled — zero external deps)
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
bytes = "1"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Output formatting
colored = "2"

# Config file parsing (pure Rust, no build script — safe on Windows Application Control)
toml = { version = "0.8", features = ["parse"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
